// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieDetails Should render different movie details correctly 1`] = `
<DocumentFragment>
  <div
    class="
                movie-details flex w-full max-h-header-height-expanded gap-x-14 p-8 text-text
                bg-content-background
            "
    data-testid="movie-details"
  >
    <img
      alt="Another Great Film poster"
      class="movie-details-poster flex-shrink-0 w-[320px] h-[485px] object-cover"
      src="https://example.com/poster-alt.jpg"
    />
    <div
      class="movie-details-info flex flex-col flex-grow"
    >
      <div
        class="flex items-center gap-x-5 mb-2"
      >
        <h1
          class="movie-details-title text-2xl font-light tracking-[1px] uppercase"
        >
          Another Great Film
        </h1>
         
        <div
          class="
                            movie-details-rating flex flex-shrink-0 items-center justify-center
                            w-3xl h-3xl border-2 rounded-full
                        "
        >
          <span
            class="font-light"
          >
            7.9
          </span>
        </div>
      </div>
      <p
        class="movie-details-genres text-md opacity-50 mb-6"
      >
        Comedy, Crime
      </p>
      <div
        class="flex items-center gap-x-6 text-[24px] font-light text-primary mb-6"
      >
        <span
          class="movie-details-date"
        >
          2022
        </span>
        <span
          class="movie-details-duration"
        >
          60min
        </span>
      </div>
      <p
        class="
                    movie-details-description font-light opacity-50 leading-relaxed overflow-y-scroll"
      >
        The greatest movie in history of cinema.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MovieDetails Should render movie details correctly with provided data 1`] = `
<DocumentFragment>
  <div
    class="
                movie-details flex w-full max-h-header-height-expanded gap-x-14 p-8 text-text
                bg-content-background
            "
    data-testid="movie-details"
  >
    <img
      alt="Pulp Fiction poster"
      class="movie-details-poster flex-shrink-0 w-[320px] h-[485px] object-cover"
      src="https://upload.wikimedia.org/wikipedia/en/3/3b/Pulp_Fiction_%281994%29_poster.jpg"
    />
    <div
      class="movie-details-info flex flex-col flex-grow"
    >
      <div
        class="flex items-center gap-x-5 mb-2"
      >
        <h1
          class="movie-details-title text-2xl font-light tracking-[1px] uppercase"
        >
          Pulp Fiction
        </h1>
         
        <div
          class="
                            movie-details-rating flex flex-shrink-0 items-center justify-center
                            w-3xl h-3xl border-2 rounded-full
                        "
        >
          <span
            class="font-light"
          >
            8.9
          </span>
        </div>
      </div>
      <p
        class="movie-details-genres text-md opacity-50 mb-6"
      >
        Comedy, Crime
      </p>
      <div
        class="flex items-center gap-x-6 text-[24px] font-light text-primary mb-6"
      >
        <span
          class="movie-details-date"
        >
          1994
        </span>
        <span
          class="movie-details-duration"
        >
          2h 34min
        </span>
      </div>
      <p
        class="
                    movie-details-description font-light opacity-50 leading-relaxed overflow-y-scroll"
      >
        Jules Winnfield (Samuel L. Jackson) and Vincent Vega (John Travolta) are two hit men who are out to retrieve a suitcase stolen from their employer, mob boss Marsellus Wallace (Ving Rhames). Wallace has also asked Vincent to take his wife Mia (Uma Thurman) out a few days later when Wallace himself will be out of town. Butch Coolidge (Bruce Willis) is an aging boxer who is paid by Wallace to lose his fight. The lives of these seemingly unrelated people are woven together comprising of a series of funny, bizarre and uncalled-for incidents.—Soumitra
      </p>
    </div>
  </div>
</DocumentFragment>
`;
